Cleaning poms, enabling and fixing lints